# RSS-to-Telegram-Bot

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Procfile  README.md  README.zh.md  app.json  db.py  docker-compose.yml.sample  emojify.json  env.py  feed.py  htmlparser.py  log.py  media.py  medium.py  message.py  opml_template.opml  post.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  telegramRSSbot.py  tgraph.py  xmlparser.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-fetch-origin.yml  codeql.yml  pr-test-docker-build.yml  publish-docker-image-dev.yml  publish-docker-image-master.yml  publish-docker-image-telethon.yml  publish-docker-image.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  rough-test.yml
docker/: Dockerfile  requirements.txt  telegramrss.py
docs/: CHANGELOG.md  CHANGELOG.zh.md  CHANGELOG_ZH.md  FAQ.md  FAQ.zh.md  README.md  advanced-settings.md  channels-using-rsstt.md  deployment-guide.md  formatting-settings.md  migration-guide-v2.md  migration-guide-v2.zh.md  translation-guide.md
scripts/: aerich_helper.py  aerich_migrations_sql_to_py.py  health_check.py
src/: __init__.py  __main__.py  aio_helper.py  compat.py  db.py  entrypoint.py  env.py  errors_collection.py  exceptions.py  feed.py  locks.py  log.py  message.py  opml_template.opml  pool.py  redirect_server.py  version.py  web.py
src/command/: __init__.py  administration.py  customization.py  inner.py  management.py  misc.py  monitor.py  opml.py  sub.py  types.py  utils.py
src/compat/: __init__.py  listparser_opml_mixin.py  utils.py
(+100 files in other folders)
