[metadata]
name = rsstt
author = Rongrong
author_email = i@rong.moe
description = A Telegram RSS bot that cares about your reading experience
long_description = file: README.md
long_description_content_type = text/markdown
license = OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
platforms = Linux, Windows, MacOS
url = https://github.com/Rongronggg9/RSS-to-Telegram-Bot
project_urls =
    Bug Tracker = https://github.com/Rongronggg9/RSS-to-Telegram-Bot/issues
    Documentation = https://github.com/Rongronggg9/RSS-to-Telegram-Bot/blob/dev/docs/README.md
    Source Code = https://github.com/Rongronggg9/RSS-to-Telegram-Bot
    Changelog = https://github.com/Rongronggg9/RSS-to-Telegram-Bot/blob/dev/docs/CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Framework :: aiohttp
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Chat
    Topic :: Internet
    Topic :: Multimedia

[requirements-files]
install_requires = requirements.txt

[options]
zip_safe = False
python_requires = >=3.9

[options.package_data]
* = *.json, *.opml, *.sql, *.txt
rsstt = ../requirements.txt
